Fix: Reduced the intensity of drop shadow behind posters in the media page

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -602,8 +602,8 @@ html {
 }
 
 .layout-mobile .detailImageContainer .card {
-    -webkit-filter: drop-shadow(0 0 .25rem rgba(0, 0, 0, 0.75));
-    filter: drop-shadow(0 0 .25rem rgba(0, 0, 0, 0.75));
+    -webkit-filter: drop-shadow(0 0 .25rem rgba(0, 0, 0, 0.25));
+    filter: drop-shadow(0 0 .25rem rgba(0, 0, 0, 0.25));
 }
 
 .detailButton {
